--- a/styles.css
+++ b/styles.css
@@ -90,13 +90,27 @@ input {
     min-width: 15vw;
 }
 
+
+input:invalid {
+    border-color: red;
+  }
+
+input:placeholder-shown {
+    border-color: #E5E7EB;
+}
+  
+input:valid {
+    border-color: green;
+  }
+
 label {
     text-transform: uppercase;
     font-size: .7rem;
 }
 
 .footer {
-    margin: 0px 90px 0px 34px;
+    width: 100%;
+    margin: 0px 0px 0px 0px;
 }
 
 .footer > p {
